# Tales-of-the-Heroes-Twin-Brave-Innocence-R-Demo

./: .gitignore  README.md  _repack.bat  pyproject.toml
2_translated/chara/: bs_emil.xml  bs_flynn.xml  bs_marta.xml  bs_yuri.xml  mb_commoner.xml  mb_thief.xml  pl_ruca.xml  pl_spada.xml  pt_ruca.xml  pt_spada.xml
2_translated/map/: s10_s01.xml  trial.xml
2_translated/menu/: eMltBattle.xml  eMltCommon.xml  eMltDebugMenu.xml  eMltGallery.xml  eMltKeyHelp.xml  eMltMediaInst.xml  eMltModeIntro.xml  eMltNetwork.xml  eMltOption.xml  eMltPlaymode.xml  eMltResult.xml  eMltSetup.xml  eMltStageIntro.xml  eMltTutorial.xml
2_translated/story/: FC_S101a.xml  FC_S101b.xml  FC_TRIALa.xml  FC_TRIALb.xml
2_translated/subs/: trial_toir.ass
tools/: ass2sub.py  sfo_title.py
tools/asm/: EbootPatches.asm  EbootText.asm
tools/tb_tools/formats/: arc.py  bdi.py  ppt.py
tools/tb_tools/project/: extract.py
tools/tb_tools/scripts/: arc_repack.py  bdi.py  bdi_repack.py  mlb_repack.py
tools/tb_tools/utils/: fileio.py
