[project]
name = "twin-brave"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "crunch64>=0.6.2",
    "imagequant>=1.1.5",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pycdlib>=1.14.0",
    "pyeboot>=0.2.3",
    "rich>=15.0.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "tools"
module-name = "tb_tools"

[project.scripts]
tb-tools = "tb_tools.__main__:tools_main"

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
]
